# x-minute-chile

./: .gitignore  Makefile  README.md  pyproject.toml
data/: make_dataset.py
notebooks/: ejemplo_valparaiso.ipynb
notebooks/exploratory/: gtfs_optimizaciones.ipynb  ttm_chunk_size.ipynb
notebooks/use-cases/: analisis_multi_ciudad.ipynb  comparacion_indices.ipynb  merge_ttms.ipynb
scripts/: make_dataset.py
xmin/: __init__.py  amenities.py  config.py  dataset.py  geometry.py  indices.py  origins.py  ratings.py  travel_time.py  visualization.py
xmin/dataset/: __init__.py  download.py  gtfs.py  osm.py  parks.py
