[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xmin"
version = "0.0.1"
description = "C\u00e1lculo de \u00edndices de accesibilidad urbana"
authors = [
  { name = "Claudio Gaete" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["xmin"]
include = ["pyproject.toml", "xmin/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["xmin"]
force-sort-within-sections = true

