[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xmin"
version = "0.0.1"
description = "C\u00e1lculo de \u00edndices de accesibilidad urbana en el contexto chileno"
authors = [
  { name = "Claudio Gaete" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "pip",
    "python-dotenv",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "geopandas>=1.1.3",
    "h3>=4.4.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "partridge>=1.1.2",
    "quackosm>=0.17.0",
    "duckdb==1.1.3",
    "r5py>=1.1.3",
    "shapely>=2.1.2",
    "tobler>=0.13.0",
    "tqdm>=4.67.3",
    "folium>=0.20.0",
    "mapclassify>=2.10.0",
    "beautifulsoup4>=4.14.3",
    "openpyxl>=3.1.5",
    "esda>=2.9.0",
    "matplotlib-map-utils>=4.0.0",
    "scikit-learn>=1.8.0",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 79
src = ["xmin"]
include = ["pyproject.toml", "xmin/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["xmin"]
force-sort-within-sections = true

[tool.uv.workspace]
members = [
    "x-minute-chile",
]

[dependency-groups]
dev = [
    "ruff",
]

